# AnkiParser

./: .gitmodules  CMakeLists.txt  README.md
ankiparser/: CMakeLists.txt
ankiparser/include/: Package.hpp
ankiparser/src/: Package.cpp
examples/: CMakeLists.txt  test.cpp
